<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF" >

    <LinearLayout
        android:id="@+id/bill_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/bill_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taxi_fare_transportation"
            android:singleLine="true"
            android:textSize="@dimen/rec_name_txt_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/range_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_period"
            android:textSize="@dimen/rec_details_txt_size" />

        <TextView
            android:id="@+id/desc_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rec_description"
            android:textSize="@dimen/rec_details_txt_size"
            android:singleLine="true"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bill_layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:gravity="right"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/bill_amount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textColor="#52A252"
            android:textSize="@dimen/rec_name_txt_size" />

        <TextView
            android:id="@+id/period_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/period"
            android:textSize="@dimen/rec_details_txt_size" />
    </LinearLayout>

</RelativeLayout>